# Nvidia-Video-Codec

./: CMakeLists.txt  LICENSE  README.md
Render/: MP4Writer.cpp  MP4Writer.h  NvCodecRender.cpp  NvCodecRender.h
VideoCodec/NvDec/: FFmpegDemuxer.h  NvDecoder.cpp  NvDecoder.h
VideoCodec/NvEnc/: NvEncoder.cpp  NvEncoderCLIOptions.h  NvEncoderCuda.cpp
test/: test.cpp
